--- a/notepad.ipynb
+++ b/notepad.ipynb
@@ -29,6 +29,30 @@
     "\n",
     "print(a)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hel lo'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def no_string(x):\n",
+    "    text = x.strip()\n",
+    "    return text\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
